--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://ArjunMohanVerma.github.io/host/",
+  "homepage": "https://ArjunMohanVerma.github.io/hosts",
   "name": "website",
   "version": "0.1.0",
   "private": true,
